test/static/reject/constants.pyi
import numpy as np

np.little_endian = False  # type: ignore[misc]
